kyy-k8s-config/src/app/backend/wechat-im-socket/wechat-im-socket-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wechat-im-socket
  labels:
    app: wechat-im-socket
spec:
  rules:
    - host: "wxws.kaoyaya.com"
      http:
        paths:
          - path: ""
            backend:
              serviceName: wechat-im-socket
              servicePort: 8000
